tests/typechecker/should_fail/type_annotations_18.csp
c :: Int
channel c : Bool
